v2.7, fix usage of deprecated API Runtime.exec